src/isort/snapshots/ruff__isort__tests__add_newline_before_comments.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 8
    column: 0
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 8
      column: 0
    content: "import os\n\n# This is a comment in the same section, so we need to add one newline.\nimport sys\n\nimport numpy as np\n\n# This is a comment, but it starts a new section, so we don't need to add a newline\n# before it.\nimport leading_prefix\n"
    message: Organize imports
  parent: ~

