src/isort/snapshots/ruff__isort__tests__closest_to_furthest_relative_imports_order.py.snap
---
source: src/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 4
    column: 0
  fix:
    content: "from . import c\nfrom .. import b\nfrom ... import a\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 4
      column: 0
  parent: ~

