src/isort/snapshots/ruff__isort__tests__combine_as_imports.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 0
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 5
      column: 0
    content: "from module import CONSTANT, function\nfrom module import Class as C\nfrom module import function as f\n"
    message: Organize imports
  parent: ~

