src/isort/snapshots/ruff__isort__tests__combine_as_imports_combine_as_imports.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 0
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 5
      column: 0
    content: "from module import CONSTANT, Class as C, function, function as f\n"
    message: Organize imports
  parent: ~

