src/isort/snapshots/ruff__isort__tests__combine_import_froms.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 55
  fix:
    patch:
      content: "from collections import (\n    AsyncIterable,\n    Awaitable,\n    ChainMap,\n    Collection,\n    MutableMapping,\n    MutableSequence,\n)\n"
      location:
        row: 1
        column: 0
      end_location:
        row: 6
        column: 0
    applied: false

