src/isort/snapshots/ruff__isort__tests__deduplicate_imports.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 0
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 5
      column: 0
    content: "import os\nimport os as os1\nimport os as os2\n"
    message: Organize imports
  parent: ~

