src/isort/snapshots/ruff__isort__tests__force_single_line_force_single_line.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 18
    column: 0
  fix:
    content: "import math\nimport sys\nfrom os import path\nfrom os import uname\n\n# comment 5\nfrom bar import a  # comment 6\nfrom bar import b  # comment 7\nfrom foo import bar  # comment 3\nfrom foo2 import bar2  # comment 4\n\n# comment 1\n# comment 2\nfrom third_party import lib1\nfrom third_party import lib2\nfrom third_party import lib3\nfrom third_party import lib4\nfrom third_party import lib5\nfrom third_party import lib6\nfrom third_party import lib7\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 18
      column: 0

